RESOLVED FIXED268278
backdrop filter should be applied to the border area of the element with border-radius
https://bugs.webkit.org/show_bug.cgi?id=268278
Summary backdrop filter should be applied to the border area of the element with bord...
Fujii Hironori
Reported 2024-01-29 00:00:48 PST
Created attachment 469593 [details] test case [TextureMapper] backdrop filter should be applied to the border area of the element
Attachments
test case (1.55 KB, text/html)
2024-01-29 00:00 PST, Fujii Hironori
no flags
another test case (837 bytes, text/html)
2024-01-29 16:59 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2024-01-29 13:53:33 PST
This is reproducible with Mac port. Seems like a bug of the common code.
Fujii Hironori
Comment 2 2024-01-29 14:19:35 PST
Fujii Hironori
Comment 3 2024-01-29 16:59:14 PST
Created attachment 469612 [details] another test case
Radar WebKit Bug Importer
Comment 4 2024-02-05 00:01:15 PST
EWS
Comment 5 2024-02-15 13:12:20 PST
Committed 274757@main (8411b7acd415): <https://commits.webkit.org/274757@main> Reviewed commits have been landed. Closing PR #23461 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.