Cherry-pick 274757@main (8411b7acd415). https://bugs.webkit.org/show_bug.cgi?id=268278

backdrop filters should be applied to the border area of the element with border-radius
    https://bugs.webkit.org/show_bug.cgi?id=268278

    Reviewed by Matt Woodrow.

    Backdrop filters should be applied to the inside of border edge of the
    element, not to the padding edge.

    * LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/backdrop-filter-clip-rect-2-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/backdrop-filter-clip-rect-2.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/backdrop-filter-clip-rect.html: Added fuzzy meta tag.
    * Source/WebCore/rendering/RenderLayerBacking.cpp:
    (WebCore::RenderLayerBacking::updateBackdropFiltersGeometry):
    Use borderRoundedRect of renderBox instead of roundedBorderBoxRect.

    Canonical link: https://commits.webkit.org/274757@main

Canonical link: https://commits.webkit.org/274313.36@webkitglib/2.44